# CrowdSense

./: .gitignore  README.md  config.json
algo/DM-Count/: .env.example  demo.py  export_onnx.py  inference_server.py  models.py  pyproject.toml  test.py  train.py  train_helper.py
algo/DM-Count/datasets/: crowd.py
crowdsense-server/: .gitignore
crowdsense-server/backend/: pom.xml
crowdsense-server/backend/src/main/java/com/example/crowdsenseserver/: CrowdsenseServerApplication.java
crowdsense-server/backend/src/main/java/com/example/crowdsenseserver/config/: AppProperties.java  MybatisPlusConfig.java  SecurityConfig.java  SwaggerConfig.java  WebMvcConfig.java
crowdsense-server/backend/src/main/resources/: application.yml
crowdsense-server/backend/src/main/resources/db/: init.sql
crowdsense-server/frontend/: index.html  package-lock.json  package.json
crowdsense-server/frontend/src/: App.vue  main.js
crowdsense-server/frontend/src/api/: inferenceTask.js  permission.js  role.js  user.js
crowdsense-server/frontend/src/router/: index.js
crowdsense-server/frontend/src/utils/: request.js
crowdsense-server/frontend/src/views/: Dashboard.vue  History.vue  InferenceTaskManagement.vue  Layout.vue  Login.vue  PermissionManagement.vue  Profile.vue  RoleManagement.vue  UserManagement.vue
frontend/: README.md  index.html  metadata.json  server.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Dashboard.tsx  InferencePage.tsx
optimized-one-click-project-1.0.1/scripts/: optimized-start-win.py
(+23 files in other folders)
